--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^2.0.10"
+    "typescript": "^2.0.10",
+    "lerna": "2.0.0-beta.30"
   }
 }
