--- a/packages/geom/package.json
+++ b/packages/geom/package.json
@@ -7,7 +7,7 @@
     "dist/"
   ],
   "dependencies": {
-    "math": "file:///Users/dan/Development/mixbook/workspace/multi-npm-repo-demo/math"
+    "math": "^1.0.0"
   },
   "devDependencies": {
     "rollup": "^0.36.3",
