--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -4,16 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "../../node_modules/.bin/webpack",
     "serve": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "http-server": "^0.9.0",
-    "ts-loader": "^1.2.1",
-    "webpack": "^1.13.3"
+    "http-server": "^0.9.0"
   },
   "dependencies": {
     "geom": "^1.0.0",
