--- a/packages/geom/package.json
+++ b/packages/geom/package.json
@@ -9,14 +9,8 @@
   "dependencies": {
     "math": "^1.0.0"
   },
-  "devDependencies": {
-    "rollup": "^0.36.3",
-    "rollup-plugin-typescript": "^0.8.1",
-    "ts-loader": "^1.2.1",
-    "webpack": "^1.13.3"
-  },
   "scripts": {
-    "build": "webpack",
+    "build": "../../node_modules/.bin/webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "typings": "./dist/geom.d.ts",
