--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "watch": "chokidar '**/*.ts' '**/*.tsx' --ignore '**/node_modules/*' --ignore '**/dist/*' -c 'lerna run build'",
+    "serve": "http-server ./packages/app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chokidar-cli": "^1.2.0",
+    "http-server": "^0.9.0",
     "lerna": "^2.0.0-beta.30",
     "ts-loader": "^1.2.1",
     "typescript": "^2.0.10",
